RESOLVED FIXED49746
compositing/masks/simple-composited-mask.html failure
https://bugs.webkit.org/show_bug.cgi?id=49746
Summary compositing/masks/simple-composited-mask.html failure
Vangelis Kokkevis
Reported 2010-11-18 10:37:22 PST
When loading: compositing/masks/simple-composited-mask.html the top image in the composited column is blank. This is with a recent nightly build: Version 5.0 (6533.16, r72146) It also occasionally happens for the masked-ancestor test, after successive reloads. I did spend a little bit of time trying to debug this and it appears that the mask layer's bounds are zero when that happens.
Attachments
Patch (11.59 KB, patch)
2010-12-13 22:50 PST, Simon Fraser (smfr)
mitz: review+
eric: commit-queue-
Simon Fraser (smfr)
Comment 1 2010-11-18 10:42:40 PST
I can reproduce. I think this must have regressed at some point.
Simon Fraser (smfr)
Comment 2 2010-11-18 10:43:02 PST
Simon Fraser (smfr)
Comment 3 2010-12-13 21:12:56 PST
The mask isn't getting painted for some reason.
Simon Fraser (smfr)
Comment 4 2010-12-13 21:39:15 PST
The masked compositing layer is 0x0; it gets its size via box->maskClipRect() but that returns 0x0 before the image has loaded. So when the mask image loads, we need to rejigger some composting geometry.
Simon Fraser (smfr)
Comment 5 2010-12-13 22:50:37 PST
mitz
Comment 6 2010-12-13 22:54:20 PST
Comment on attachment 76503 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=76503&action=review > WebCore/rendering/RenderLayerBacking.cpp:801 > - if (isDirectlyCompositedImage()) { > + if ((changeType == RenderLayer::ImageChanged) && isDirectlyCompositedImage()) { This method’s body can now be a switch statement.
WebKit Review Bot
Comment 7 2010-12-13 22:57:39 PST
Eric Seidel (no email)
Comment 8 2010-12-13 23:58:45 PST
Eric Seidel (no email)
Comment 9 2010-12-14 01:17:39 PST
Comment on attachment 76503 [details] Patch Seems this patch will need an update to avoid breaking Chromium.
Vangelis Kokkevis
Comment 10 2010-12-14 10:03:47 PST
(In reply to comment #9) > (From update of attachment 76503 [details]) > Seems this patch will need an update to avoid breaking Chromium. Definitely. I'll update and resubmit! Thanks.
Simon Fraser (smfr)
Comment 11 2010-12-14 11:18:57 PST
I can take care of it.
Simon Fraser (smfr)
Comment 12 2010-12-14 16:10:33 PST
WebKit Review Bot
Comment 13 2010-12-14 17:18:29 PST
http://trac.webkit.org/changeset/74066 might have broken SnowLeopard Intel Release (Tests) The following tests are not passing: fast/css/focus-ring-detached.html fast/css/focus-ring-multiline.html
Note You need to log in before you can comment on or make changes to this bug.